tests/parsing/smtlib/poly/errors/173_par_close_parenthesis_1.expected
File "tests/parsing/smtlib/poly/errors/173_par_close_parenthesis_1.psmt2", line 2, character 20-21:
2 | (assert (par (X) C) _)
                        ^
Error while parsing a command, read the reserved word '_',
      but expected a closing parenthesis.
